; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-engine.c_tl_parse_max_views.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-engine.c_tl_parse_max_views.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_ERROR_VALUE_NOT_IN_RANGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"max_views should be 0 or 100 (%d presented)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_parse_max_views() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @tl_fetch_int()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %0
  %6 = load i32, i32* %1, align 4
  %7 = icmp ne i32 %6, 100
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i32, i32* @TL_ERROR_VALUE_NOT_IN_RANGE, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @tl_fetch_set_error_format(i32 %9, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %10)
  br label %12

12:                                               ; preds = %8, %5, %0
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @tl_fetch_int(...) #1

declare dso_local i32 @tl_fetch_set_error_format(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
